# Nivitz-doc-diff

./: .gitignore  LICENSE  README.md  pyproject.toml
.hermes/plans/: 2026-04-24_131500-v0.2-paragraph-alignment.md
src/nivitz_doc_diff/: __init__.py  cli.py  diff_engine.py  docx_reader.py  docx_writer.py
tests/: test_diff_engine.py  test_docx_reader.py  test_docx_writer.py  test_helpers.py
